<resources>
    <string name="app_name">TeamProject</string>
    <string name="web_client_id">xxxxxxxx..place your web client id here</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ace Plus Co.Ltd.,</string>
    <string name="nav_header_subtitle">MICT Part, Hlaing Township</string>
    <string name="nav_header_subtitle1">aceplus@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_gallery">About As</string>
    <string name="menu_slideshow">Help</string>
    <string name="menu_tools">Logout</string>

    <string-array name="course_name">
        <item>Kotlin</item>
        <item>Activity</item>
        <item>Firebase</item>
        <item>HTML</item>
        <item>CSS</item>
        <item>SCSS</item>
        <item>Spring</item>
        <item>Hibernate</item>
        <item>Security</item>
    </string-array>

    <string-array name="track_name">
        <item>Android</item>
        <item>PHP</item>
        <item>Java</item>
    </string-array>
    <string-array name="batch_no">
        <item>Batch 1</item>
        <item>Batch 2</item>
        <item>Batch 3</item>
    </string-array>
    <string-array name="skill">
        <item>Excellent</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Average</item>
        <item>Poor</item>
    </string-array>

    <string name="edt_hint_email">Email</string>
    <string name="edt_hint_password">Password</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Admin List</string>

    <string name="title">Activities in talent program training period -</string>
    <string name="knowledge">- Knowledges Sharing</string>
    <string name="discuss">- Discussion</string>
    <string name="play">- Playing Game for Soft Skill</string>
    <string name="chess">- Chess Competation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
