<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_aboutas"
                android:icon="@drawable/aboutus"
                android:title="@string/menu_gallery"/>
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/b_help"
                android:title="@string/menu_slideshow"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/img_logout"
                android:title="@string/menu_tools"/>
    </group>



</menu>
