<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mix_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".ui.activities.MainActivity">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/relativeLayout">

        <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:layout_marginTop="0dp"/>

        <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dip"
                app:centered="true"
                app:fillColor="#df0623"
                app:pageColor="#fff"
                app:snap="false"
                android:layout_marginTop="0dp"
                android:layout_below="@+id/pager"/>
    </RelativeLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_bar"/>
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main"
            android:id="@+id/textView27"
            android:fontFamily="@font/style_american"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/discuss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView28"
            android:textColor="@color/main"
            android:fontFamily="@font/style_american"
            app:layout_constraintTop_toBottomOf="@+id/textView27" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:layout_marginTop="8dp"
            android:textSize="16sp"/>
    <TextView
            android:text="@string/knowledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView29"
            android:textColor="@color/main"
            android:fontFamily="@font/style_american"
            app:layout_constraintTop_toBottomOf="@+id/textView28"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:textSize="16sp"/>
    <TextView
            android:text="@string/chess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView30"
            android:textColor="@color/main"
            android:fontFamily="@font/style_american"
            app:layout_constraintTop_toBottomOf="@+id/textView29" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:textSize="16sp"/>
    <TextView
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main"
            android:fontFamily="@font/style_american"
            android:id="@+id/textView31" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>