<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height" xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/stoke"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">
    <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            app:cardCornerRadius="50dp"
            android:layout_height="100dp"
            tools:ignore="MissingConstraints"
            android:id="@+id/cardView"
            android:background="#8BC34A"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2">
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/aceplus"
                android:id="@+id/imgMainProfile"/>
    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/txtMainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textColor="@color/main"
            android:fontFamily="@font/style_american"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:layout_marginTop="8dp"
            android:textColor="@color/main"
            android:fontFamily="@font/style_american"
            android:id="@+id/txtMainPosition"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/main"
            android:fontFamily="@font/style_american"
            android:text="@string/nav_header_subtitle1"
            android:id="@+id/txtMainEmail"/>


</LinearLayout>
